--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a mother and teacher.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Perth, Western Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, running, going to the beach, trying new recipes</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Challenging, interesting and flexible</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Perth, Western Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to solve problems and learn new skills.</p>
     </section>
 
     <footer id="footer">
